tests/basic/check/lam/050.pan.out
tests/basic/check/lam/050.pan:2:1-4: error: unable to verify type of f50
tests/basic/check/lam/050.pan:5:1-4: error: unable to verify type of f51
tests/basic/check/lam/050.pan:8:1-4: error: unable to verify type of f52
tests/basic/check/lam/050.pan:11:1-4: error: unable to verify type of f53