tests/basic/check/lam/050.pan
f50 : int -> {w:int|w=2}
f50 = \x:int. 1

f51 : {v:int|true} -> {w:int|w=2}
f51 = \x:int. 1

f52 : {v:int|v=1} -> {w:int|w=2}
f52 = \x:int. 1

f53 : {v:int|v=2} -> {w:int|w=2}
f53 = \x:int. 1

